fix UI(credential-management): limit full_name column width and adoverflow ellipsis

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -55,6 +55,13 @@
     margin-left: auto;
   }
 
+  .mat-column-full_name{
+    max-width: 100px; 
+    max-height: 50px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
 @media(width < 1025px){
   .credential-management-container {
     .title{
